Add migration command timeout
Co-authored-by: VyacheslavSemin <vyacheslav.semin@onlyoffice.com>
Co-committed-by: VyacheslavSemin <vyacheslav.semin@onlyoffice.com>

--- a/templates/jobs/pre-upgrade.yaml
+++ b/templates/jobs/pre-upgrade.yaml
@@ -138,6 +138,8 @@ spec:
               key: {{ .Values.connections.mysqlSecretKeyPassword }}
         - name: MIGRATION_TYPE
           value: {{ .Values.connections.migrationType }}
+        - name: COMMAND_TIMEOUT
+          value: {{ .Values.connections.commandTimeout | quote }}
         envFrom:
         - configMapRef:
             name: docspace
