--- a/values.yaml
+++ b/values.yaml
@@ -126,6 +126,8 @@ connections:
   installationType: "{{ .Values.global.installationType }}"
   # connections.migrationType Defines migration type
   migrationType: STANDALONE
+  # connections.commandTimeout Defines timeout for executing the migration command
+  commandTimeout: "100"
   # connections.mysqlDatabaseMigration Enables database migration
   mysqlDatabaseMigration: "false"
   # connections.mysqlHost The IP address or the name of the Database host
