Add the ability to specify multiple hostname for Ingress
Co-authored-by: VyacheslavSemin <vyacheslav.semin@onlyoffice.com>
Co-committed-by: VyacheslavSemin <vyacheslav.semin@onlyoffice.com>

--- a/values.yaml
+++ b/values.yaml
@@ -5242,8 +5242,16 @@ ingress:
     # ingress.tls.secretName Secret name for TLS to mount into the Ingress
     # Used only when `ingress.tls.enabled=true`
     secretName: tls
+  ## ingress.pathType Specifies the path type for the ONLYOFFICE DocSpace ingress resource
+  ## Allowed values: `Exact`, `Prefix` or `ImplementationSpecific`
+  pathType: ImplementationSpecific
   # ingress.host Ingress hostname for the DocSpace
   host: ""
+  # ingress.tenants Ingress hostnames if you need to use more than one name
+  # For example, for multitenancy
+  # If set to, it takes priority over the `ingress.host`
+  # If `ingress.tls.enabled` is set to `true`, it is assumed that the certificate for all specified domains is kept secret by `ingress.tls.secretName`
+  tenants: []
 
 # DocSpace jobs parameters
 #
