Add the ability to set up hostAliases
Co-authored-by: VyacheslavSemin <vyacheslav.semin@onlyoffice.com>
Co-committed-by: VyacheslavSemin <vyacheslav.semin@onlyoffice.com>

--- a/templates/applications/identity-api.yaml
+++ b/templates/applications/identity-api.yaml
@@ -105,6 +105,9 @@ spec:
       imagePullSecrets:
       - name: {{ .Values.imagePullSecrets }}
       {{- end }}
+      {{- if .Values.connections.hostAliases }}
+      hostAliases: {{- toYaml .Values.connections.hostAliases | nindent 8 }}
+      {{- end }}
       containers:
       - name: identity-api
         image: {{ include "docspace.imageRepository" (list . .Values.identity.api.image.repository) }}:{{ default .Values.images.tag .Values.identity.api.image.tag }}
