--- a/templates/applications/identity.yaml
+++ b/templates/applications/identity.yaml
@@ -105,6 +105,9 @@ spec:
       imagePullSecrets:
       - name: {{ .Values.imagePullSecrets }}
       {{- end }}
+      {{- if .Values.connections.hostAliases }}
+      hostAliases: {{- toYaml .Values.connections.hostAliases | nindent 8 }}
+      {{- end }}
       containers:
       - name: identity-authorization
         image: {{ include "docspace.imageRepository" (list . .Values.identity.authorization.image.repository) }}:{{ default .Values.images.tag .Values.identity.authorization.image.tag }}
