--- a/templates/applications/router.yaml
+++ b/templates/applications/router.yaml
@@ -102,6 +102,9 @@ spec:
       imagePullSecrets:
       - name: {{ .Values.imagePullSecrets }}
       {{- end }}
+      {{- if .Values.connections.hostAliases }}
+      hostAliases: {{- toYaml .Values.connections.hostAliases | nindent 8 }}
+      {{- end }}
       {{- with .Values.router.initContainers }}
       initContainers:
       {{- toYaml . | nindent 6 }}
