--- a/.github/workflows/4testing_repo.yaml
+++ b/.github/workflows/4testing_repo.yaml
@@ -28,7 +28,7 @@ jobs:
             RC='1'
           fi
           NEW_VERSION=$(echo $NEW_VERSION)-rc$RC
-          sed '0,/version/s/\(version:\).*/\1 '$NEW_VERSION'/' -i Chart.yaml
+          sed 's/\(^version:\).*/\1 '$NEW_VERSION'/' -i Chart.yaml
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
