Disable hazelcast for identity services by default
Co-authored-by: VyacheslavSemin <vyacheslav.semin@onlyoffice.com>
Co-committed-by: VyacheslavSemin <vyacheslav.semin@onlyoffice.com>

--- a/templates/configmaps/identity.yaml
+++ b/templates/configmaps/identity.yaml
@@ -13,9 +13,11 @@ metadata:
   {{- end }}
 data:
   SPRING_PROFILES_ACTIVE: {{ .Values.identity.env.springProfilesActive | quote }}
+  SPRING_APPLICATION_REGION: {{ .Values.identity.env.region | quote }}
+  {{- if .Values.identity.serviceAccount.create }}
   HZ_NETWORK_JOIN_MULTICAST_ENABLED: {{ .Values.identity.env.multicast.enabled | quote }}
   HZ_NETWORK_JOIN_KUBERNETES_ENABLED: {{ .Values.identity.env.kubernetes.enabled | quote }}
   HZ_NETWORK_JOIN_KUBERNETES_SERVICENAME: "identity-cache"
   HZ_NETWORK_JOIN_KUBERNETES_NAMESPACE: {{ include "docspace.namespace" . | quote }}
-  SPRING_APPLICATION_REGION: {{ .Values.identity.env.region | quote }}
+  {{- end }}
 {{- end }}
